--- a/upscaler-website/package.json
+++ b/upscaler-website/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "three": "^0.155.0",
+    "upscaler": "^1.0.0-beta.17",
     "vue": "^3.2.13"
   },
   "devDependencies": {
