--- a/upscaler-website/package.json
+++ b/upscaler-website/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@upscalerjs/esrgan-thick": "^1.0.0-beta.13",
+    "autoprefixer": "^10.4.15",
     "core-js": "^3.8.3",
+    "opencv.js": "^1.2.1",
     "upscaler": "^1.0.0-beta.17",
     "vue": "^3.2.13"
   },
@@ -19,7 +22,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "tailwindcss": "^3.3.3"
   },
   "eslintConfig": {
     "root": true,
